renamed the jersey libs vars
Former-commit-id: 01638b99a10d543b327ef8e089097b492b5b9caf

--- a/jacs2-commonweb/build.gradle
+++ b/jacs2-commonweb/build.gradle
@@ -7,10 +7,11 @@ project(":jacs2-commonweb") {
                 JACKSON_JAXRS_JSON_PROVIDER,
                 JAVAX_SERVLET_API_LIB,
                 JAX_RS_API_LIB,
-                JAX_RS_CDI_EXT_LIB,
-                JAX_RS_CONTAINERS_LIB,
-                JAX_RS_CORE_LIB,
-                JAX_RS_SERVER_LIB,
+                JAX_RS_JERSEY_CDI_SERVLET_LIB,
+                JAX_RS_JERSEY_CONTAINERS_LIB,
+                JAX_RS_JERSEY_CORE_LIB,
+                JAX_RS_JERSEY_SERVER_LIB,
+                JAX_RS_JERSEY_INJECT_LIB,
                 UNDERTOW_CORE_LIB,
                 UNDERTOW_SERVLET_LIB,
                 SWAGGER_LIB
