exclude jackson from jongo
Former-commit-id: 2cb1384383388db8c8f01f6410f1d84c025128e5

--- a/jacs2-services/build.gradle
+++ b/jacs2-services/build.gradle
@@ -18,6 +18,12 @@ project(":jacs2-services") {
                 JAVA_LSF_LIB,       
                 SPARK_LAUNCHER
 
+        compile (JONGO_LIB) {
+            exclude group: 'com.fasterxml.jackson.core'
+            exclude group: 'com.fasterxml.jackson.datatype'
+            exclude group: 'com.fasterxml.jackson.jaxrs'
+        }
+
         compile (JACS_MODEL_LIB) {
             exclude group: 'com.fasterxml.jackson.core'
             exclude group: 'com.fasterxml.jackson.datatype'
