--- a/jacs2-asyncweb/build.gradle
+++ b/jacs2-asyncweb/build.gradle
@@ -5,5 +5,8 @@ mainClassName = 'org.janelia.jacs2.app.AsyncServicesApp'
 project(":jacs2-asyncweb") {
     dependencies {
         compile project(":jacs2-commonweb")
+
+        testCompile JAX_RS_JERSEY_TEST_LIB,
+                    JAX_RS_JERSEY_TEST_PROVIDER_LIB
     }
 }
