propagate the queueId so that the entire hierarchy gets processed in one place
Former-commit-id: 72247506f5e2cd48cc806a7057f0f41e991e1f9c

--- a/jacs2-services/src/main/resources/jacs.properties
+++ b/jacs2-services/src/main/resources/jacs.properties
@@ -31,7 +31,7 @@ service.taskQueue.InitialDelayInMillis=0
 service.taskQueue.PeriodInMillis=50
 service.taskQueue.ThreadPoolSize=5
 
-service.queue.id=jacs
+service.queue.id={env.HOSTNAME}
 service.queue.MaxCapacity=100
 service.queue.InitialDelayInSeconds=30
 service.queue.PeriodInSeconds=10
