added JAX-RS resource to handle scheduled services
Former-commit-id: b37e8b5a36eaee6c7ccd38da4ea75115665ececa

--- a/deps.gradle
+++ b/deps.gradle
@@ -75,6 +75,9 @@ dependencies {
         // drmaa
         DRMAA1_LIB = "us.levk:drmaa-gridengine:6.2u5"
 
+        // cron utils
+        CRON_UTILS_LIB = "com.cronutils:cron-utils:7.0.1"
+
         // janelia libraries
         JAVA_LSF_LIB = "org.janelia:java-lsf:0.1.0"
         JACS_MODEL_LIB = "org.janelia:jacs-model:1.0.1"
