added SE container mechanism to instantiate objects; also added lightsheet step config files
Former-commit-id: a235bf639dd96f745304bdac0f3527330c27b101

--- a/jacs2-asyncweb/build.gradle
+++ b/jacs2-asyncweb/build.gradle
@@ -4,7 +4,10 @@ mainClassName = 'org.janelia.jacs2.app.AsyncServicesApp'
 
 project(":jacs2-asyncweb") {
     dependencies {
-        compile project(":jacs2-commonweb")
+        compile project(":jacs2-commonweb"),
+                CDI_SE_CORE_LIB,
+                JAX_RS_JERSEY_CDI_SERVLET_LIB,
+                JAX_RS_JERSEY_INJECT_LIB
 
         testCompile JAX_RS_JERSEY_TEST_LIB,
                     JAX_RS_JERSEY_TEST_PROVIDER_LIB
