--- a/jacs2-commonweb/build.gradle
+++ b/jacs2-commonweb/build.gradle
@@ -1,19 +1,16 @@
 project(":jacs2-commonweb") {
     dependencies {
         compile project(":jacs2-services"),
-                CDI_API_LIB,
                 CDI_SERVLET_LIB,
                 CMDLINE_ARG_LIB,
                 JACKSON_JAXRS_JSON_PROVIDER,
                 JAVAX_SERVLET_API_LIB,
                 JAX_RS_API_LIB,
-                JAX_RS_JERSEY_CDI_SERVLET_LIB,
                 JAX_RS_JERSEY_CONTAINERS_LIB,
                 JAX_RS_JERSEY_CORE_LIB,
                 JAX_RS_JERSEY_SERVER_LIB,
-                JAX_RS_JERSEY_INJECT_LIB,
+                SWAGGER_LIB,
                 UNDERTOW_CORE_LIB,
-                UNDERTOW_SERVLET_LIB,
-                SWAGGER_LIB
+                UNDERTOW_SERVLET_LIB
     }
 }
