added SE package
Former-commit-id: 2a8cf8694ba15a61b1228ba8285bf0e61cd6f7d2

--- a/jacs2-syncweb/build.gradle
+++ b/jacs2-syncweb/build.gradle
@@ -4,6 +4,10 @@ mainClassName = 'org.janelia.jacs2.app.SyncServicesApp'
 
 project(":jacs2-syncweb") {
     dependencies {
-        compile project(":jacs2-commonweb")
+        compile project(":jacs2-commonweb"),
+                CDI_SE_CORE_LIB,
+                JAX_RS_JERSEY_CDI_SERVLET_LIB,
+                JAX_RS_JERSEY_INJECT_LIB
+
     }
 }
