implemented grid account info for spark jobs
Former-commit-id: f3fbf8304164b015a81aff73eb640520640a1596

--- a/jacs2-services/src/main/resources/jacs.properties
+++ b/jacs2-services/src/main/resources/jacs.properties
@@ -39,6 +39,7 @@ service.queue.PeriodInSeconds=10
 service.exejob.checkIntervalInMillis=0
 
 service.cluster.checkIntervalInSeconds=5
+service.cluster.requiresAccountInfo=true
 
 service.maxRunningProcesses=-1
 service.fileCopy.maxRunningProcesses=2
