mechanism to cancel, suspend, resume a service
Former-commit-id: 053d8d03a1dffe89f5fe0a1208c651eec4c7a98e

--- a/jacs2-commonweb/build.gradle
+++ b/jacs2-commonweb/build.gradle
@@ -13,4 +13,12 @@ project(":jacs2-commonweb") {
                 UNDERTOW_CORE_LIB,
                 UNDERTOW_SERVLET_LIB
     }
+
+    processResources {
+        filesMatching('**/version.txt') {
+            filter(org.apache.tools.ant.filters.ReplaceTokens, tokens: [
+                    "version": project.version
+            ])
+        }
+    }
 }
