Service that runs a singularity container
Former-commit-id: bfcef473e413c518eea49ecfe7177c6b69a9e842

--- a/jacs2-services/src/main/resources/jacs.properties
+++ b/jacs2-services/src/main/resources/jacs.properties
@@ -151,3 +151,6 @@ CMTKAlignment.Library.Path=/groups/jacs/jacsHosts/servers/jacs/executables/Qt-4.
 
 # Lightsheet
 LightsheetPipeline.Bin.Path=lightsheet/lightsheetPipeline.sh
+
+# Singularity
+Singularity.Bin.Path=/usr/bin/singularity
