--- a/jacs2-services/build.gradle
+++ b/jacs2-services/build.gradle
@@ -31,6 +31,10 @@ project(":jacs2-services") {
             exclude group: 'javax.transaction'
         }
 
+        compile files('lib/jgraphx-3.9.3.jar')
+
+        compile "org.jetbrains.kotlin:kotlin-stdlib-jdk8:1.2.31"
+
         runtime MYSQL_DRIVER_LIB
     }
 }
