--- a/jacs2-services/src/main/resources/jacs.properties
+++ b/jacs2-services/src/main/resources/jacs.properties
@@ -17,7 +17,8 @@ LSF.password=
 
 TimebasedIdentifierGenerator.DeploymentContext=0
 
-service.DefaultWorkingDir=
+service.JacsDataDir=/groups/jacs/jacsDev
+service.DefaultWorkingDir={service.JacsDataDir}/devstore
 service.DefaultScratchDir=/scratch/jacs
 
 service.dispatcher.InitialDelayInSeconds=30
@@ -71,6 +72,35 @@ service.colorDepthSearch.numNodes=6
 service.colorDepthSearch.jarPath={Executables.ModuleBase}/colormipsearch/colormipsearch-1.0-jar-with-dependencies.jar
 service.colorDepthSearch.filepath=/nrs/jacs/jacsData/filestore/system/ColorDepthMIPs
 
+###################################################################################################################
+# WORKFLOW
+###################################################################################################################
+
+# Script dirs
+ScriptBase.Path={Executables.ModuleBase}/scripts/single_neuron
+
+# Xvfb
+InitXvfb.Path={ScriptBase.Path}/ImageTools/initXvfb.sh
+MonitorXvfb.Path={ScriptBase.Path}/ImageTools/monitorXvfb.sh
+
+# Fiji
+Fiji.Bin.Path={Executables.ModuleBase}/Fiji.app/ImageJ-linux64
+Fiji.Macro.Path={ScriptBase.Path}/FijiMacros
+
+# Distortion Correction
+DistortionCorrection.Macro.Path={Fiji.Macro.Path}/Chromatic_abberation_pipeline.ijm
+DistortionCorrection.Fields.Path={service.JacsDataDir}/DistortionAberration/
+
+
+
+
+
+
+
+
+###################################################################################################################
+###################################################################################################################
+
 # External executables
 Perl.Path=/misc/sc/jacs-perl/bin/perl
 
@@ -89,14 +119,7 @@ LSMMerge.ScriptPath=scripts/single_neuron/MergePipeline/imgMerge.sh
 # Mip creation script
 MipCreator.ScriptPath=scripts/single_neuron/NeuronSeparator/mipCreator.sh
 
-# Fiji & Fiji macros
-Fiji.Bin.Path=Fiji.app/ImageJ-linux64
-Fiji.Macro.Path=scripts/single_neuron/FijiMacros
-Fiji.RunHeadless=false
-
 Fiji.BasicMIPsAndMovies=Basic_MIP_StackAvi.ijm
-Fiji.DistortionCorrection=Chromatic_abberation_pipeline.ijm
-
 Fiji.EnhancedMIPsAndMovies=Enhanced_MIP_StackAvi.ijm
 
 # ImageMagick
