added simplemipsandmovies processor;use simplemipsandmovies in MultiInputMIPsAndMoviesProcessor; channel spec no longer a required field as it can be left out for simplemips
Former-commit-id: 096d214e7435730ad6fabdce4fcb88781812a949

--- a/jacs2-services/src/main/resources/jacs.properties
+++ b/jacs2-services/src/main/resources/jacs.properties
@@ -99,6 +99,8 @@ Fiji.DistortionCorrection=Chromatic_abberation_pipeline.ijm
 
 Fiji.EnhancedMIPsAndMovies=Enhanced_MIP_StackAvi.ijm
 
+Fiji.SimpleMIPsAndMovies=Simple_MIP_StackAvi.ijm
+
 # ImageMagick
 ImageMagick.Bin.Path=ImageMagick/bin
 ImageMagick.Lib.Path=ImageMagick/lib
