refactored lightsheet pipeline step processor to use container service
Former-commit-id: 7af103965ee17c61709d247a989777cddca7cd66

--- a/jacs2-services/src/main/resources/jacs.properties
+++ b/jacs2-services/src/main/resources/jacs.properties
@@ -152,7 +152,9 @@ CMTKAlignment.DefaultTemplate.File=/nrs/scicompsoft/otsuna/JFRC2010_BrainAligner
 CMTKAlignment.Library.Path=/groups/jacs/jacsHosts/servers/jacs/executables/Qt-4.7.4-redhat/lib:/groups/jacs/jacsHosts/servers/jacs-data4/executables/vaa3d-redhat/plugins
 
 # Lightsheet
-LightsheetPipeline.Bin.Path=lightsheet/lightsheetPipeline.sh
+Container.Registry.URL=shub://imagecatcher
+ImageProcessing.Collection={Container.Registry.URL}/imageprocessing
+ImageProcessing.Lightsheet.Version=1.0
 
 # Singularity
 Singularity.Bin.Path=/usr/bin/singularity
