changed the binding param construction
Former-commit-id: 11b851a461b7a5cfe7f6a568a12a1784dfb186eb

--- a/jacs2-services/src/main/resources/jacs.properties
+++ b/jacs2-services/src/main/resources/jacs.properties
@@ -155,6 +155,7 @@ CMTKAlignment.Library.Path=/groups/jacs/jacsHosts/servers/jacs/executables/Qt-4.
 Container.Registry.URL=shub://imagecatcher
 ImageProcessing.Collection={Container.Registry.URL}/imageprocessing
 ImageProcessing.Lightsheet.Version=1.0
+ImageProcessing.Lightsheet.DataMountPoints=
 
 # Singularity
 Singularity.Bin.Path=/usr/bin/singularity
