removed the generics from abstractsingularitycontainerprocessor
Former-commit-id: db8ff517d902d42a40da398ef2c9679ab2fce10e

--- a/jacs2-services/src/main/resources/jacs.properties
+++ b/jacs2-services/src/main/resources/jacs.properties
@@ -159,3 +159,4 @@ ImageProcessing.Lightsheet.DataMountPoints=
 
 # Singularity
 Singularity.Bin.Path=/usr/bin/singularity
+Singularity.LocalImages.Path={service.DefaultWorkingDir}/containerImages
