suppress unchecked warnings where it makes sense for a warning free compilation
Former-commit-id: 1fef049f398d722ffe54f2f09c424b4322c20ff2

--- a/build.gradle
+++ b/build.gradle
@@ -46,7 +46,8 @@ subprojects {
         compileJava {
             doFirst {
                 options.compilerArgs = [
-                    '-Xlint:deprecation'
+                    '-Xlint:deprecation',
+		    '-Xlint:unchecked'
                 ]
             }
         }
@@ -54,7 +55,17 @@ subprojects {
         compileTestJava {
             doFirst {
                 options.compilerArgs = [
-                    '-Xlint:deprecation'
+                    '-Xlint:deprecation',
+		    '-Xlint:unchecked'
+                ]
+            }
+        }
+
+        compileIntegrationTestJava {
+            doFirst {
+                options.compilerArgs = [
+                    '-Xlint:deprecation',
+		    '-Xlint:unchecked'
                 ]
             }
         }
