WIP - first working version of LSM processing
Former-commit-id: 9f5856365aa432288c1d171cce05ad2ca29f4c3b

--- a/jacs2-services/build.gradle
+++ b/jacs2-services/build.gradle
@@ -17,6 +17,9 @@ project(":jacs2-services") {
                 REFLECTIONS_LIB,
                 JAVA_LSF_LIB,
                 DAGOBAH_LIB,
+                COMMONS_IO_LIB,
+                GSON_LIB,
+                COMMONS_HTTPCLIENT3,
                 SPARK_LAUNCHER
 
         compile (JONGO_LIB) {
