--- a/jacs2-services/src/main/resources/jacs.properties
+++ b/jacs2-services/src/main/resources/jacs.properties
@@ -20,6 +20,7 @@ TimebasedIdentifierGenerator.DeploymentContext=0
 service.JacsDataDir=/groups/jacs/jacsDev
 service.DefaultWorkingDir={service.JacsDataDir}/devstore
 service.DefaultScratchDir=/scratch/jacs
+FileStore.CentralDir={service.DefaultWorkingDir}
 
 service.dispatcher.InitialDelayInSeconds=30
 service.dispatcher.PeriodInSeconds=1
@@ -90,10 +91,6 @@ Fiji.Macro.Path={ScriptBase.Path}/FijiMacros
 # Distortion Correction
 DistortionCorrection.Macro.Path={Fiji.Macro.Path}/Chromatic_abberation_pipeline.ijm
 DistortionCorrection.Fields.Path={service.JacsDataDir}/DistortionAberration/
-
-
-
-
 
 
 
@@ -183,3 +180,18 @@ ImageProcessing.Lightsheet.DataMountPoints=
 # Singularity
 Singularity.Bin.Path=/usr/bin/singularity
 Singularity.LocalImages.Path={service.DefaultWorkingDir}/containerImages
+
+
+
+# Validate quotas when running jobs?
+Quota.Validation=true
+
+# Janelia File Service endpoint for checking disk quotas
+Quota.ServiceURL=http://jacs-webdav1:8880/JFS/api/quota/filestore
+
+# Filestore to which quotas are applied
+Quota.FileStoreDir=/nrs/jacs/jacsData/filestore
+
+
+
+
