--- a/deps.gradle
+++ b/deps.gradle
@@ -18,6 +18,7 @@ dependencies {
         // utilities
         GUAVA_LIB = "com.google.guava:guava:23.0"
         REFLECTIONS_LIB = "org.reflections:reflections:0.9.10"
+        GSON_LIB = "com.google.code.gson:gson:2.2.2"
 
         // database
         MONGODB_VERSION = "3.6.3"
@@ -32,6 +33,8 @@ dependencies {
         COMMONS_LANG_LIB = "org.apache.commons:commons-lang3:${COMMONS_LANG_VERSION}"
         COMMONS_COLLECTIONS_VERSION = "4.1"
         COMMONS_COLLECTIONS_LIB = "org.apache.commons:commons-collections4:${COMMONS_COLLECTIONS_VERSION}"
+        COMMONS_IO_LIB = "commons-io:commons-io:1.4"
+        COMMONS_HTTPCLIENT3 = "commons-httpclient:commons-httpclient:3.1"
 
         // JAX-RS API
         JAX_RS_API_LIB = "javax.ws.rs:javax.ws.rs-api:2.1"
