refactored spark launcher
Former-commit-id: dc6c4f47258748f8062d0f5cf3be2acee6072557

--- a/jacs2-services/src/main/resources/jacs.properties
+++ b/jacs2-services/src/main/resources/jacs.properties
@@ -62,10 +62,11 @@ service.spark.executor.memory=75g
 service.spark.executor.cores=15
 service.spark.cluster.hard.duration.mins=60
 service.spark.log4jconfig.filepath={Executables.ModuleBase}/colormipsearch/log4j.properties
+service.spark.cluster.startTimeoutInSeconds=3600
+service.spark.cluster.intervalCheckInMillis=2000
 hadoop.homeDir=/misc/local/hadoop-2.6.4
 
 # Color depth search
-service.colorDepthSearch.clusterStartTimeoutInSeconds=3600
 service.colorDepthSearch.searchTimeoutInSeconds=3600
 service.colorDepthSearch.numNodes=6
 service.colorDepthSearch.jarPath={Executables.ModuleBase}/colormipsearch/colormipsearch-1.0-jar-with-dependencies.jar
