replaced juel with glasfish java expression implementation
Former-commit-id: 82235fdd1e9b8479902e648bdc644fc3a4ced65b

--- a/jacs2-services/build.gradle
+++ b/jacs2-services/build.gradle
@@ -12,7 +12,7 @@ project(":jacs2-services") {
                 JAX_RS_JERSEY_CLIENT_LIB,
                 JAX_RS_JERSEY_MEDIA_LIB,
                 JAX_RS_JERSEY_MEDIA_JSON_LIB,
-                JUEL_LIB,
+                JAVA_EXP_IMPL_LIB,
                 MONGODB_DRIVER_LIB,
                 REFLECTIONS_LIB,
                 JAVA_LSF_LIB,       
