methods to deal with workspaces and neurons
Former-commit-id: 403594557b4e114530c1b91939e51b0213b67f7a

--- a/jacs2-services/src/main/resources/jacs.properties
+++ b/jacs2-services/src/main/resources/jacs.properties
@@ -7,6 +7,10 @@ MongoDB.ThreadsAllowedToBlockForConnectionMultiplier=10
 MongoDB.ConnectionsPerHost=500
 MongoDB.ConnectTimeout=120000
 
+mouselight.db.url=jdbc:mysql://flyportal-db.int.janelia.org:3306/flyportal?useCursorFetch=true&rewriteBatchedStatements=true&useServerPrepStmts=true&cachePrepStmts=true
+mouselight.db.user=flyportalApp
+mouselight.db.password=flyp0rt@lApp
+
 sage.db.url=jdbc:mysql://mysql3:3306/sage?useCursorFetch=true&rewriteBatchedStatements=true&useServerPrepStmts=true&cachePrepStmts=true&serverTimezone=EST
 sage.db.user=sageRead
 sage.db.password=sageRead
