--- a/build.gradle
+++ b/build.gradle
@@ -17,6 +17,9 @@ subprojects {
         repositories {
             mavenLocal()
             mavenCentral()
+            maven {
+                url "http://maven.int.janelia.org/nexus/content/groups/public/"
+            }
             flatDir {
                 dirs "${rootDir}/projectrepository"
             }
@@ -47,7 +50,7 @@ subprojects {
             doFirst {
                 options.compilerArgs = [
                     '-Xlint:deprecation',
-		    '-Xlint:unchecked'
+                    '-Xlint:unchecked'
                 ]
             }
         }
@@ -56,7 +59,7 @@ subprojects {
             doFirst {
                 options.compilerArgs = [
                     '-Xlint:deprecation',
-		    '-Xlint:unchecked'
+                    '-Xlint:unchecked'
                 ]
             }
         }
@@ -65,7 +68,7 @@ subprojects {
             doFirst {
                 options.compilerArgs = [
                     '-Xlint:deprecation',
-		    '-Xlint:unchecked'
+                    '-Xlint:unchecked'
                 ]
             }
         }
