Changed the default spark settings, and also changed the calculation of the default parallelism because now service.spark.executor.cores represents the number of cores per executor - before it was actually the total number of spark cores per node
Former-commit-id: 758777adebb5e8e97c60cf7b383256ef0ecc49b5

--- a/jacs2-services/src/main/resources/jacs.properties
+++ b/jacs2-services/src/main/resources/jacs.properties
@@ -54,12 +54,12 @@ StorageService.ApiKey=
 Executables.ModuleBase=/groups/jacs/jacsHosts/servers/jacs-data4/executables
 
 # Spark services
-service.spark.nodeSlots=16
-service.spark.sparkVersion=2.3.1
+service.spark.nodeSlots=32
+service.spark.sparkVersion=bw
 service.spark.sparkHomeDir=/misc/local/spark-2.3.1
 service.spark.driver.memory=1g
 service.spark.executor.memory=75g
-service.spark.executor.cores=15
+service.spark.executor.cores=5
 service.spark.cluster.hard.duration.mins=60
 service.spark.log4jconfig.filepath={Executables.ModuleBase}/colormipsearch/log4j.properties
 service.spark.cluster.startTimeoutInSeconds=3600
@@ -68,7 +68,7 @@ hadoop.homeDir=/misc/local/hadoop-2.6.4
 
 # Color depth search
 service.colorDepthSearch.searchTimeoutInSeconds=3600
-service.colorDepthSearch.numNodes=6
+service.colorDepthSearch.numNodes=3
 service.colorDepthSearch.jarPath={Executables.ModuleBase}/colormipsearch/colormipsearch-1.0-jar-with-dependencies.jar
 service.colorDepthSearch.filepath=/nrs/jacs/jacsData/filestore/system/ColorDepthMIPs
 
