allocate correct number of nodes
Former-commit-id: d65a074659ebcd6c2f998937c32031628db71693

--- a/jacs2-services/src/main/resources/jacs.properties
+++ b/jacs2-services/src/main/resources/jacs.properties
@@ -68,7 +68,9 @@ hadoop.homeDir=/misc/local/hadoop-2.6.4
 
 # Color depth search
 service.colorDepthSearch.searchTimeoutInSeconds=3600
-service.colorDepthSearch.numNodes=3
+service.colorDepthSearch.minNodes=1
+service.colorDepthSearch.maxNodes=8
+service.colorDepthSearch.maxResultsPerMask=500
 service.colorDepthSearch.jarPath={Executables.ModuleBase}/colormipsearch/colormipsearch-1.0-jar-with-dependencies.jar
 service.colorDepthSearch.filepath=/nrs/jacs/jacsData/filestore/system/ColorDepthMIPs
 
