externalize spark/lsf properties
Former-commit-id: 02f1c4a4347299352e083bf0ca6bd47f8e62735a

--- a/jacs2-services/src/main/resources/jacs.properties
+++ b/jacs2-services/src/main/resources/jacs.properties
@@ -54,8 +54,10 @@ StorageService.ApiKey=
 Executables.ModuleBase=/groups/jacs/jacsHosts/servers/jacs-data4/executables
 
 # Spark services
-service.spark.nodeSlots=32
 service.spark.sparkVersion=bw
+service.spark.lsf.application=sparkbatch32(bw)
+service.spark.lsf.remoteCommand=commandstring
+service.spark.nodeSlots=32
 service.spark.sparkHomeDir=/misc/local/spark-2.3.1
 service.spark.driver.memory=1g
 service.spark.executor.memory=50g
