additional properties for connection idle time and connection life time:
Former-commit-id: 696c1a55612febce0ba62af2dc911e973ec8d434

--- a/jacs2-services/src/main/resources/jacs.properties
+++ b/jacs2-services/src/main/resources/jacs.properties
@@ -6,6 +6,7 @@ MongoDB.FutureDatabase=jacs2
 MongoDB.ThreadsAllowedToBlockForConnectionMultiplier=10
 MongoDB.ConnectionsPerHost=500
 MongoDB.ConnectTimeout=120000
+MongoDB.MaxWaitTimeInSecs=120
 
 sage.db.url=jdbc:mysql://mysql3:3306/sage?useCursorFetch=true&rewriteBatchedStatements=true&useServerPrepStmts=true&cachePrepStmts=true&serverTimezone=EST
 sage.db.user=sageRead
