fixed empty default swc path
Former-commit-id: b7d3f2772e2641ce4f9266f5c0b71d4647486bdd

--- a/jacs2-services/src/main/resources/jacs.properties
+++ b/jacs2-services/src/main/resources/jacs.properties
@@ -147,6 +147,8 @@ NeuronSeparator.Library.Path=/groups/jacs/jacsHosts/servers/jacs/executables/Qt-
 NeuronWarping.Script.Path=scripts_5.12/single_neuron/NeuronSeparator/warpedPipeline.sh
 NeuronWarping.Library.Path=/groups/jacs/jacsHosts/servers/jacs/executables/Qt-4.7.4-redhat/lib:/groups/jacs/jacsHosts/servers/jacs-data4/executables/vaa3d-redhat/plugins
 
+service.swcImport.DefaultLocation=/tmp
+
 Octree.Bin.Path=jacs2_scripts/octree.jl
 Anaconda.Bin.Path=anaconda/bin
 KTX.Src.Path=jacs2_scripts/pyktx/src
