--- a/jacs2-services/src/main/resources/jacs.properties
+++ b/jacs2-services/src/main/resources/jacs.properties
@@ -1,4 +1,4 @@
-jacs.version=DEV
+jacs.version=7.20.2
 
 MongoDB.ConnectionURL=mongodb://localhost:27017/?maxPoolSize=20&maxIdleTimeMS=500
 MongoDB.Database=jacs
