--- a/jacs2-services/src/main/resources/jacs.properties
+++ b/jacs2-services/src/main/resources/jacs.properties
@@ -1,5 +1,10 @@
 jacs.version=DEV
 
+# LDAP Settings
+LDAP.URL=ldap-vip1.int.janelia.org:389
+LDAP.BaseDN=ou=People,dc=hhmi,dc=org
+
+# Mongo connection settings
 MongoDB.ConnectionURL=mongodb://localhost:27017/?maxPoolSize=20&maxIdleTimeMS=500
 MongoDB.Database=jacs
 MongoDB.FutureDatabase=jacs2
