dataset resource with quota support
Former-commit-id: 77cd70180be0905dabb4bde21a07fffdec3f8d8f

--- a/jacs2-services/src/main/resources/jacs.properties
+++ b/jacs2-services/src/main/resources/jacs.properties
@@ -59,6 +59,9 @@ service.mergeChannels.maxRunningProcesses=2
 service.defaultProcessingLocation=LOCAL
 service.lsmFileMetadata.defaultProcessingLocation=LOCAL
 
+Dataset.Storage.DefaultVolume=nrsFilestore
+
+StorageService.URL=http://jacs-dev.int.janelia.org:8880/jacsstorage/master_api/v1
 StorageService.ApiKey=
 
 Executables.ModuleBase=/groups/jacs/jacsHosts/servers/jacs-data4/executables
