--- a/jacs2-services/src/main/resources/jacs.properties
+++ b/jacs2-services/src/main/resources/jacs.properties
@@ -13,11 +13,11 @@ MongoDB.ConnectionsPerHost=500
 MongoDB.ConnectTimeout=120000
 MongoDB.MaxWaitTimeInSecs=120
 
-mouselight.db.url=jdbc:mysql://flyportal-db.int.janelia.org:3306/flyportal?useCursorFetch=true&rewriteBatchedStatements=true&useServerPrepStmts=true&cachePrepStmts=true
+mouselight.db.url=jdbc:mysql://flyportal-db.int.janelia.org:3306/flyportal?useCursorFetch=true&rewriteBatchedStatements=true&useServerPrepStmts=true&cachePrepStmts=true&autoReconnect=true
 mouselight.db.user=flyportalApp
 mouselight.db.password=flyp0rt@lApp
 
-sage.db.url=jdbc:mysql://mysql3:3306/sage?useCursorFetch=true&rewriteBatchedStatements=true&useServerPrepStmts=true&cachePrepStmts=true&serverTimezone=EST
+sage.db.url=jdbc:mysql://mysql3:3306/sage?useCursorFetch=true&rewriteBatchedStatements=true&useServerPrepStmts=true&cachePrepStmts=true&serverTimezone=EST&autoReconnect=true
 sage.db.user=sageRead
 sage.db.password=sageRead
 
