--- a/deps.gradle
+++ b/deps.gradle
@@ -83,7 +83,7 @@ dependencies {
 
         // janelia libraries
         JAVA_LSF_LIB = "org.janelia:java-lsf:0.1.0"
-        JACS_MODEL_LIB = "org.janelia:jacs-model:1.1.0.SNAPSHOT"
+        JACS_MODEL_LIB = "org.janelia:jacs-model:1.1.1"
 
         // testing
         JUNIT_VERSION = "4.12"
