removed batch spark launcher and made fixes for the flex spark launcher
Former-commit-id: 5d70724aef3da5e5c4b0bc7a2de72fe5957d4a85

--- a/jacs2-services/src/main/resources/jacs.properties
+++ b/jacs2-services/src/main/resources/jacs.properties
@@ -57,8 +57,7 @@ Executables.ModuleBase=/groups/jacs/jacsHosts/servers/jacs-data4/executables
 # Spark services
 service.spark.sparkVersion=2.3.1
 service.spark.sparkHomeDir=/misc/local/spark-{service.spark.sparkVersion}
-service.spark.lsf.batchApplication=sparkbatch32
-service.spark.lsf.flexApplication=spark32
+service.spark.lsf.application=spark32
 service.spark.lsf.remoteCommand=commandstring
 service.spark.nodeSlots=32
 service.spark.driver.memory=1g
