--- a/jacs2-services/src/main/resources/jacs.properties
+++ b/jacs2-services/src/main/resources/jacs.properties
@@ -180,3 +180,5 @@ ImageProcessing.Lightsheet.DataMountPoints=
 # Singularity
 Singularity.Bin.Path=/usr/bin/singularity
 Singularity.LocalImages.Path={service.DefaultWorkingDir}/containerImages
+
+Solr.ServerURL=http://jacs-solr:8890/solr/FlyWorkstation
