--- a/jacs2-syncweb/build.gradle
+++ b/jacs2-syncweb/build.gradle
@@ -7,7 +7,7 @@ project(":jacs2-syncweb") {
         compile project(":jacs2-commonweb"),
                 CDI_SE_CORE_LIB,
                 JAX_RS_JERSEY_CDI_SERVLET_LIB,
-                JAX_RS_JERSEY_INJECT_LIB
-
+                JAX_RS_JERSEY_INJECT_LIB,
+                SOLR_SEARCH_LIB
     }
 }
