added http client dependency
Former-commit-id: ca983254030e7472cf02c92f7aa0c4dbd782fdfa

--- a/deps.gradle
+++ b/deps.gradle
@@ -84,6 +84,7 @@ dependencies {
         // search
         SOLR_VERSION = "3.6.2"
         SOLR_SEARCH_LIB = "org.apache.solr:solr-solrj:${SOLR_VERSION}"
+	HTTP_CLIENT_LIB = "org.apache.httpcomponents:httpclient:4.5.6"
 
         // janelia libraries
         JAVA_LSF_LIB = "org.janelia:java-lsf:1.0.0"
