--- a/jacs2-services/src/main/resources/jacs.properties
+++ b/jacs2-services/src/main/resources/jacs.properties
@@ -181,4 +181,6 @@ ImageProcessing.Lightsheet.DataMountPoints=
 Singularity.Bin.Path=/usr/bin/singularity
 Singularity.LocalImages.Path={service.DefaultWorkingDir}/containerImages
 
+# Solr indexing parameters
 Solr.ServerURL=http://jacs-solr:8890/solr/FlyWorkstation
+Solr.CommitDelayInMillis=5000
