--- a/jacs2-syncweb/build.gradle
+++ b/jacs2-syncweb/build.gradle
@@ -1,4 +1,8 @@
-apply plugin: 'application'
+plugins {
+    id 'application'
+    id 'distribution'
+    id 'nebula.rpm' version '4.8.0'
+}
 
 mainClassName = 'org.janelia.jacs2.app.SyncServicesApp'
 
@@ -8,5 +12,20 @@ project(":jacs2-syncweb") {
                 CDI_SE_CORE_LIB,
                 JAX_RS_JERSEY_CDI_SERVLET_LIB,
                 JAX_RS_JERSEY_INJECT_LIB
+    }
+
+    distributions {
+        main {
+           contents {
+                into('swagger-webapp') {
+                    from(new File(project(':jacs2-commonweb').projectDir, 'src/main/swagger-webapp')) {
+                        include '**'
+                    }
+                    from(new File(projectDir, 'src/main/swagger-webapp')) {
+                        include 'index.html'
+                    }
+                }
+            }
+        }
     }
 }
