added downloadLicenses target
Former-commit-id: 8c1384165a056447cc69ced53d3a8509beeae390

--- a/build.gradle
+++ b/build.gradle
@@ -1,3 +1,7 @@
+plugins {
+    id "com.github.hierynomus.license" version "0.15.0"
+}
+
 allprojects {
     apply plugin: 'java'
     apply plugin: 'idea'
@@ -93,6 +97,11 @@ subprojects {
                     configurations.integrationTestRuntime
                 ]
             }
+        }
+
+        downloadLicenses {
+            includeProjectDependencies = true
+            dependencyConfiguration = 'compile'
         }
 
         task integrationTest(type: Test) {
