--- a/build.gradle
+++ b/build.gradle
@@ -99,6 +99,11 @@ subprojects {
             }
         }
 
+        license {
+            header rootProject.file('LICENSE.md')
+            exclude "**/*"
+        }
+
         downloadLicenses {
             includeProjectDependencies = true
             dependencyConfiguration = 'compile'
