update the result
Former-commit-id: 88589c11c7f078ab61d94fd1e442852cc123a82a

--- a/jacs2-services/src/main/resources/jacs.properties
+++ b/jacs2-services/src/main/resources/jacs.properties
@@ -14,12 +14,12 @@ MongoDB.ConnectTimeout=120000
 MongoDB.MaxWaitTimeInSecs=120
 
 mouselight.db.url=jdbc:mysql://flyportal-db.int.janelia.org:3306/flyportal?useCursorFetch=true&rewriteBatchedStatements=true&useServerPrepStmts=true&cachePrepStmts=true&autoReconnect=true
-mouselight.db.user=flyportalApp
-mouselight.db.password=flyp0rt@lApp
+mouselight.db.user=
+mouselight.db.password=
 
 sage.db.url=jdbc:mysql://mysql3:3306/sage?useCursorFetch=true&rewriteBatchedStatements=true&useServerPrepStmts=true&cachePrepStmts=true&serverTimezone=EST&autoReconnect=true
-sage.db.user=sageRead
-sage.db.password=sageRead
+sage.db.user=
+sage.db.password=
 
 LSF.PAC.URL=https://lsf-pac:8443
 LSF.user=
